<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Picture">

    <!-- activity_picture.xml -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.jsibbold.zoomage.ZoomageView
            android:id="@+id/particularimage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            app:zoomage_zoomable="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/photo_status"/>

        <LinearLayout
            android:id="@+id/components"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/download12"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/download_logo"
                    android:layout_margin="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Download"
                    android:textColor="@color/action_col"
                    android:textSize="16sp"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/sharebtn2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/share"
                    android:layout_margin="3dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_1"
                    android:textColor="@color/action_col"
                    android:textSize="16sp"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
