<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_bg"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Step 1 -->
        <LinearLayout
            android:id="@+id/step1Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:elevation="4dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STEP1"
                android:textSize="18sp"
                android:textColor="@color/divider_color"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="fitCenter"
                android:src="@drawable/scr1" />
        </LinearLayout>

        <!-- Step 2 -->
        <LinearLayout
            android:id="@+id/step2Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:elevation="4dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/step1Layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STEP2"
                android:textSize="18sp"
                android:textColor="@color/divider_color"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/STEP2"
                android:src="@drawable/scr2" />
        </LinearLayout>

        <!-- Step 3 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:elevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/step2Layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STEP3"
                android:textSize="18sp"
                android:textColor="@color/divider_color"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/STEP3"
                android:src="@drawable/image_3" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
